--- a/examples/Simulation_results.ipynb
+++ b/examples/Simulation_results.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "9367abe0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "sys.path.append('/home/francesco/Desktop/Integrated Actin/virtual_lab')"
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "bcadf6df",
    "metadata": {},
    "outputs": [
