added LIF example and small cleanup

--- a/examples/Simulation_results.ipynb
+++ b/examples/Simulation_results.ipynb
@@ -146,19 +146,7 @@
    "id": "b1f362dd",
    "metadata": {},
    "source": [
-    "## Momentum Model -> A bit of a monster"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "1e697c34",
-   "metadata": {},
-   "source": [
-    "So, this I can make work pretty well with the addition of a few extra parameter changes (one for enlarging the synapse, and one for the shrinkage). Biophysically, they're both plausible as they could account for the concentration of  dp- and p-cofilin (respectively active and inactive) in the synapse. In that case, the balance between polymerization and depolymerization is shifted. This could be introduced in the $V_d$ variable, but that would still not reproduce the complex STC experiments, which with this model we can do. One thing to look up is how long the dephosphorylated cofilin is present in large amounts during LTD. -> No luck so far..\n",
-    "\n",
-    "MAYBE: You could define $V_e$ as the volume of the synapse in equilibrium (no nucleation), given a certain concentration of d-cofilin vs p-cofilin. This is the attractor for the stable and dynamic pool due to physical forces (as in Bonilla-Quintana-Fauth), and its value shifts depending on environmental conditions. Specifically, if the balance between inactive and active cofilin is shifted, the result will be a change in volume, as you'll either have uncontrolled severing (depression) or, depending on the amount of available actin close to the spine neck ($\\sim Vs$), you will start constructing the enlargement pool. I have no clue if this is accurate, out of the few variations I implemented this seems to work the best. \n",
-    "So in a way this acts as a proxy attractor for the PSD \"volume\", in the sense that the PSD will also be affected by these mechanisms, indirectly in the case of the enlargement pool, and directly in the case of severing (you're cutting down the actin supporting structure)."
+    "## Momentum Model"
    ]
   },
   {
@@ -854,19 +842,6 @@
     "x_data = (np.arange(900,7*3600,300) - PROTEIN - 300)/3600\n",
     "Sim.plot_selected_points(protein_results,[\"Vpsd\",\"V_tot\"],\"last\",[\"stim\"], x_data= x_data,xlabel = \"Time of protein availability (h)\",\n",
     "ylabel = r\"Volume $\\mu m^3$\", filename = f\"LTD_protein_times_all_models.png\", separate_legend = False, fontsize = 18,multi_plot=2)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "740689e6",
-   "metadata": {},
-   "source": [
-    "# Next steps:\n",
-    "- Optimize the TagResetting result for Momentum model.\n",
-    "- Find biological explanation for the \"gating\" of the $V_e$ variable\n",
-    "- Find better names for constants and variables\n",
-    "- (MAYBE) Try including the receptor content based on Moritz 2021, just to see if it comes out"
    ]
   },
   {
